fix: Increase z-index on /open footer to be above feedback footer. Close #251

--- a/director/assets/sass/styles.sass
+++ b/director/assets/sass/styles.sass
@@ -229,6 +229,7 @@ h6.has-top-margin
 .open-footer
   background-color: transparent
   color: black
+  z-index: 6
 
 .conversions-footer
   background-color: transparent
